--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <h3 class="itemCartTotal text-white">Total: 0</h3>
                 </div>
                 <div class="col d-flex justify-content-end">
-                    <button class="btn btn-success">COMPRAR</button>
+                    <button class="btn btn-primary" id="btnMostrarSwal">COMPRAR</button>
                 </div>
             </div>
 
@@ -233,6 +233,7 @@
 
     </footer>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
@@ -240,6 +241,7 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
+    <script src="libreria.js"></script>
 </body>
 
 </html>
