--- a/fetch.html
+++ b/fetch.html
@@ -20,6 +20,7 @@
         }
     </style>
 </head>
+<a class="h4 m-4 text-primary" href="index.html">Regresar</a>
 
 <body>
     <div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
