--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </ul>
     </header>
 
+    <a class="h4 m-4 text-primary" href="fetch.html">Usuarios </a>
+
     <div class="alert container position-sticky top-0 alert-primary hide" role="alert">
         Producto Añadido al carrito!
     </div>
